created script for calender load

--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendar App Vanilla JS</title>
+    <title>Calender Scheduler App</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
   </head>
   <body>
     
@@ -51,6 +52,6 @@
 
     <div id="modalBackDrop"></div>
 
-    <script src="./script.js"></script>
+    
   </body>
 </html>
