Responsive design complete

--- a/client/index.html
+++ b/client/index.html
@@ -20,13 +20,13 @@
       </div>
 
       <div id="weekdays">
-        <div>Sunday</div>
-        <div>Monday</div>
-        <div>Tuesday</div>
-        <div>Wednesday</div>
-        <div>Thursday</div>
-        <div>Friday</div>
-        <div>Saturday</div>
+        <div><div>Sunday</div></div>
+        <div><div>Monday</div></div>
+        <div><div>Tuesday</div></div>
+        <div><div>Wednesday</div></div>
+        <div><div>Thursday</div></div>
+        <div><div>Friday</div></div>
+        <div><div>Saturday</div></div>
       </div>
 
       <div id="calendar"></div>
