create event modal created

--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,11 @@
     <div id="newEventModal">
       <h2>New Event</h2>
 
-      <input id="eventTitleInput" placeholder="Event Title" />
+      <input id="schedule_facultyName" placeholder="Faculty Name" />
+      <input id="schedule_batch" placeholder="Batch" />
+      <input id="schedule_date" placeholder="Date" />
+      <input id="schedule_start" placeholder="Start Time" />
+      <input id="schedule_end" placeholder="End Time" />
 
       <button id="saveButton">Save</button>
       <button id="cancelButton">Cancel</button>
