CREATE and READ operations done

--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
     <div id="deleteEventModal">
       <h2>Event</h2>
 
-      <div id="eventText"></div>
+      <div id="eventsContainer"></div>
       <button id="addMoreButton">Add More</button>
       
       <button id="closeButton">Close</button>
