UI for filter created

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
   <body>
     
     <div id="container">
+      
       <div id="header">
         <div id="monthDisplay"></div>
         <div>
@@ -68,7 +69,11 @@
     </div>
 
     <div id="modalBackDrop"></div>
-
+    <div id="filterDiv">
+      <input type="text" id="keyword" placeholder="Enter Faculty Name"/>
+      <button id="filter">Filter</button>
+    </div>
 </div>
+
   </body>
 </html>
